--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "btr-milestone-tracker-client-only",
-    "slug": "btr-milestone-tracker-client-only",
+    "name": "test-app-2",
+    "slug": "test-app-2",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
