--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
+  }
 }
