--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -21,11 +22,15 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
+    "install": "^0.13.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-ionicons": "^4.6.5",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.17.7"
